--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header wrapper">
       <nav>
         <a class="header-logo inner-logo" href="index.html">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
-        <div class="main-navigation fl-container">
+        <div class="main-navigation fl-container container">
           <form action="https://echo.htmlacademy.ru" class="site-search">
             <input type="search" id="site-search" name="search" placeholder="Поиск по сайту" class="site-search-input">
             <button type="submit" class="site-search-btn btn-reset">Найти</button>
@@ -104,7 +104,7 @@
           </fieldset>
           <button type="submit" class="btn-reset btn filter-btn">Показать</button>
         </form>
-        <div class="item-list-container">
+        <div class="item-list-container wrapper">
           <div class="sort fl-container">
             <h3>Сортировка:</h3>
             <ul class="sort-list lst-reset">
@@ -237,6 +237,7 @@
           <a href="tel:+74954959595" class="footer-nav-phone">Тел.: +7 (495) 495-95-95</a>
         </div>
         <div class="footer-social fl-container">
+          <hr />
           <ul class="footer-social-list lst-reset">
             <li class="footer-social-item">
               <a href="#">
