--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header wrapper">
       <nav class="container">
         <a class="header-logo logo">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
@@ -261,7 +261,8 @@
           </ul>
           <a href="tel:+74954959595" class="footer-nav-phone">Тел.: +7 (495) 495-95-95</a>
         </div>
-        <div class="footer-social fl-container">
+        <div class="footer-social fl-container wrapper">
+          <hr />
           <ul class="footer-social-list lst-reset">
             <li class="footer-social-item">
               <a href="#">
