--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="main-header wrapper">
-      <nav>
+      <nav class="container">
         <a class="header-logo inner-logo" href="index.html">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
