--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -241,7 +240,7 @@
     </div>
 
     <footer class="main-footer">
-      <div class="wrapper footer-container">
+      <div class="wrapper">
         <nav class="fl-container">
           <a class="footer-logo logo">
             <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
@@ -289,7 +288,7 @@
 
     <section class="map-popup" hidden>
       <h3 class="visually-hidden">Увеличенная карта</h3>
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBFd7ZWs3A" width="960" height="559" frameborder="1" allowfullscreen="true"></iframe></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFd7ZWs3A" width="960" height="559"></iframe>
       <p>
         <img src="img/map-big.jpg" alt="Карта (увеличенная)" height="559" width="960">
       </p>
