--- a/catalog.html
+++ b/catalog.html
@@ -49,9 +49,9 @@
     </header>
     <h1 class="container">Моноподы для селфи</h1>
     <ul class="breadcrumb container">
-      <li><a href="index.html">Главная</a></li>
-      <li><a href="#">Каталог товаров</a></li>
-      <li><a class="active">Моноподы для селфи</a></li>
+      <li><a class="breadcrumb-link" href="index.html">Главная</a></li>
+      <li><a class="breadcrumb-link" href="#">Каталог товаров</a></li>
+      <li class="breadcrumb-active"><a class="breadcrumb-link">Моноподы для селфи</a></li>
     </ul>
     <main class="inner-main">
       <div class="fl-container wrapper">
