--- a/catalog.html
+++ b/catalog.html
@@ -30,16 +30,14 @@
         <ul class="main-site-list inner-main-site-list lst-reset fl-container">
           <li class="main-site-item">
             <a class="main-submenu-toggle">Каталог товаров</a>
-            <div class="main-submenu-container">
-              <ul class="main-submenu fl-container lst-reset">
-                <li class="main-submenu-item"><a href="#">Виртуальная реальность</a></li>
-                <li class="main-submenu-item"><a href="#">Фитнес-браслеты</a></li>
-                <li class="main-submenu-item"><a href="#">Квадрокоптеры</a></li>
-                <li class="main-submenu-item"><a href="catalog.html">Моноподы для селфи</a></li>
-                <li class="main-submenu-item"><a href="#">Умные часы</a></li>
-                <li class="main-submenu-item"><a href="#">Экшн-камеры</a></li>
-              </ul>
-            </div>
+            <ul class="main-submenu fl-container lst-reset">
+              <li class="main-submenu-item"><a href="#">Виртуальная реальность</a></li>
+              <li class="main-submenu-item"><a href="#">Фитнес-браслеты</a></li>
+              <li class="main-submenu-item"><a href="#">Квадрокоптеры</a></li>
+              <li class="main-submenu-item"><a href="catalog.html">Моноподы для селфи</a></li>
+              <li class="main-submenu-item"><a href="#">Умные часы</a></li>
+              <li class="main-submenu-item"><a href="#">Экшн-камеры</a></li>
+            </ul>
           </li>
           <li class="main-site-item"><a href="#">Доставка</a></li>
           <li class="main-site-item"><a href="#">Гарантия</a></li>
@@ -47,12 +45,14 @@
         </ul>
       </nav>
     </header>
-    <h1 class="container">Моноподы для селфи</h1>
-    <ul class="breadcrumb container">
-      <li><a class="breadcrumb-link" href="index.html">Главная</a></li>
-      <li><a class="breadcrumb-link" href="#">Каталог товаров</a></li>
-      <li class="breadcrumb-active"><a class="breadcrumb-link">Моноподы для селфи</a></li>
-    </ul>
+    <div class="wrapper">
+      <h1 class="container">Моноподы для селфи</h1>
+      <ul class="breadcrumb container">
+        <li><a class="breadcrumb-link" href="index.html">Главная</a></li>
+        <li><a class="breadcrumb-link" href="#">Каталог товаров</a></li>
+        <li class="breadcrumb-active"><a class="breadcrumb-link">Моноподы для селфи</a></li>
+      </ul>
+    </div>
     <main class="inner-main">
       <div class="fl-container wrapper">
         <form class="filter" method="post" action="https://echo.htmlacademy.ru">
@@ -261,6 +261,7 @@
       </div>
     </footer>
 
-    <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
+<!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
+
   </body>
 </html>
