--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
           </form>
           <ul class="main-user-nav lst-reset fl-container">
             <li class="main-user-item">
-              <a href="#">Валентин Петухов</a>
+              <a href="https://htmlacademy.ru/profile/id581221">Валентин Петухов</a>
               <a href="#" class="main-user-out">Выйти</a>
             </li>
             <li class="main-user-item"><a href="#">Сравнить</a></li>
@@ -219,7 +219,7 @@
           </a>
           <ul class="footer-user-nav lst-reset">
             <li class="footer-user-item">
-              <a href="#">Валентин Петухов</a>
+              <a href="https://htmlacademy.ru/profile/id581221">Валентин Петухов</a>
               <a href="#" class="main-user-out">Выйти</a>
             </li>
             <li class="footer-user-item"><a href="#">Сравнить</a></li>
