--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@
         <input name="benefits-control" class="visually-hidden benefits-control-3" type="radio" id="benefits-3">
         <ul class="benefits-titles lst-reset fl-container fld-column">
           <li class="benefits-title benefits-title-1">
-            <label class="btn benefits-label-1" for="benefits-1" tabindex="0">
+            <label class="btn benefits-label-1 btn-reset" for="benefits-1" tabindex="0">
               Доставка
             </label>
           </li>
           <li class="benefits-title benefits-title-2">
-            <label class="btn benefits-label-2" for="benefits-2" tabindex="0">
+            <label class="btn benefits-label-2 btn-reset" for="benefits-2" tabindex="0">
               Гарантия
             </label>
           </li>
           <li class="benefits-title benefits-title-3">
-            <label class="btn benefits-label-3" for="benefits-3" tabindex="0">
+            <label class="btn benefits-label-3 btn-reset" for="benefits-3" tabindex="0">
               Кредит
             </label>
           </li>
