--- a/catalog.html
+++ b/catalog.html
@@ -70,34 +70,34 @@
           <fieldset class="color fl-container fld-column">
             <legend>Цвет</legend>
             <label for="color-black">
-              <input class="visually-hidden" type="checkbox" name="color-value" id="color-black" value="black" checked>
+              <input class="visually-hidden filter-input" type="checkbox" name="color-value" id="color-black" value="black" checked>
               <span>Чёрный</span>
             </label>
             <label for="color-white">
-              <input class="visually-hidden" type="checkbox" name="color-value" id="color-white" value="white">
+              <input class="visually-hidden filter-input" type="checkbox" name="color-value" id="color-white" value="white">
               <span>Белый</span>
             </label>
             <label for="color-blue">
-              <input class="visually-hidden" type="checkbox" name="color-value" id="color-blue" value="blue" checked>
+              <input class="visually-hidden filter-input" type="checkbox" name="color-value" id="color-blue" value="blue" checked>
               <span>Синий</span>
             </label>
             <label for="color-red">
-              <input class="visually-hidden" type="checkbox" name="color-value" id="color-red" value="red" checked>
+              <input class="visually-hidden filter-input" type="checkbox" name="color-value" id="color-red" value="red" checked>
               <span>Красный</span>
             </label>
             <label for="color-pink">
-              <input class="visually-hidden" type="checkbox" name="color-value" id="color-pink" value="pink">
+              <input class="visually-hidden filter-input" type="checkbox" name="color-value" id="color-pink" value="pink">
               <span>Розовый</span>
             </label>
           </fieldset>
           <fieldset class="bluetooth fl-container fld-column">
             <legend>Bluetooth</legend>
             <label for="bluetooth-true">
-              <input class="visually-hidden" type="radio" name="bluetooth-value" id="bluetooth-true" checked value="true">
+              <input class="visually-hidden filter-input" type="radio" name="bluetooth-value" id="bluetooth-true" checked value="true">
               <span>Есть</span>
             </label>
             <label for="bluetooth-no">
-              <input class="visually-hidden" type="radio" name="bluetooth-value" id="bluetooth-no" value="no">
+              <input class="visually-hidden filter-input" type="radio" name="bluetooth-value" id="bluetooth-no" value="no">
               <span>Нет</span>
             </label>
           </fieldset>
