--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <label for="slider-control-3" class="visually-hidden">Слайд номер три</label>
           <input type="radio" class="visually-hidden slider-control-3" name="slider-control" id="slider-control-3">
           <div class="slider-controls">
-            <label for="slider-control-1" tabindex="0"></label>
-            <label for="slider-control-2" tabindex="0"></label>
-            <label for="slider-control-3" tabindex="0"></label>
+            <label for="slider-control-1"></label>
+            <label for="slider-control-2"></label>
+            <label for="slider-control-3"></label>
           </div>
           <div class="slider-container fl-container">
             <div class="slider-item fl-container">
@@ -270,7 +270,7 @@
 
     <section class="benefits">
       <div class="wrapper fl-container">
-        <input name="benefits-control" class="visually-hidden benefits-control-1" type="radio" id="benefits-1"checked>
+        <input name="benefits-control" class="visually-hidden benefits-control-1" type="radio" id="benefits-1" checked>
         <input name="benefits-control" class="visually-hidden benefits-control-2" type="radio" id="benefits-2">
         <input name="benefits-control" class="visually-hidden benefits-control-3" type="radio" id="benefits-3">
         <ul class="benefits-titles lst-reset fl-container fld-column">
